display: flex 전체 제거 완료. 모든 css파일 index.css파일로 통합 README.md 및 .gitignore 파일 수정 #11

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,10 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>둘리에요...</title>
-		<link rel="stylesheet" href="common.css">
-		<link rel="stylesheet" href="header.css">
-		<link rel="stylesheet" href="footer.css">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="./css/index.css">
 	</head>
 	
 	<body>
@@ -33,8 +30,8 @@
 		
 		<!-- section -->
 		<section>
-			<h1 class="greeting">웹프론트엔드 개발자~! dooli</h1>
-			<p class="description">
+			<h1>웹프론트엔드 개발자~! dooli</h1>
+			<p>
 				함께 개발하고 성장하고 싶어요.
 				<br>
 				경기도 어딘가에 살고 있습니다.
