--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -4,10 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>둘리에요...</title>
-		<link rel="stylesheet" href="common.css">
-		<link rel="stylesheet" href="header.css">
-		<link rel="stylesheet" href="footer.css">
-		<link rel="stylesheet" href="photo.css">
+		<link rel="stylesheet" href="./css/index.css">
 	</head>
 	
 	<body>
@@ -33,8 +30,8 @@
 		
 		<!-- section -->
 		<section>
-			<ul class="content_list">
-				<li class="content_item">
+			<ul class="diary_list">
+				<li class="diary_item">
 					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcPPu2UQtG7DmF1FlWro93aeCuNEws-3sIrjB9pcYOz149qFI" alt="둘리 어렸을 때 사진"/>
 					<p>
 						1980.01.01
@@ -46,7 +43,7 @@
 						신세계임.
 					</p>
 				</li>
-				<li class="content_item">
+				<li class="diary_item">
 					<img src="https://s-sg.tc.smule.com/sf/s80/arr/2c/81/e30db1a8-29bd-4af9-b745-d7b82d904ce4_256.jpg" alt="둘리 인기 있을 때 사진"/>
 					<p>
 						1992.01.01
@@ -56,7 +53,7 @@
 						이때만 해도 잘 나갔습니다.
 					</p>
 				</li>
-				<li class="content_item">
+				<li class="diary_item">
 					<img src="http://images.jkn.co.kr/data/images/full/772014/image.jpg?w=600?w=600" alt="뽀로로 사진"/>
 					<p>
 						2019.01.01
