--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -4,10 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>둘리에요...</title>
-		<link rel="stylesheet" href="common.css">
-		<link rel="stylesheet" href="header.css">
-		<link rel="stylesheet" href="footer.css">
-		<link rel="stylesheet" href="aboutme.css">
+		<link rel="stylesheet" href="./css/index.css">
 	</head>
 	
 	<body>
