HTML/CSS 가독성 증가, Style CSS 통합 관리

--- a/WebContent/aboutme/aboutme.html
+++ b/WebContent/aboutme/aboutme.html
@@ -4,7 +4,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" type="text/css" href="/aboutme/aboutme.css">
+<link rel="stylesheet" href="/2019_1st_intern/aboutme/aboutme.css">
+<link rel="stylesheet" href="/2019_1st_intern/aboutme/common.css">
 <title>PJT1</title>
 </head>
 
@@ -12,46 +13,44 @@
 <body>
 	<header>
 		<ul type='none'>
-			<a href="/aboutme/today">
+			<a href="/2019_1st_intern/aboutme/today">
 				<li class=btn>몇시에요</li>
 			</a>
-			<a href="/aboutme/photo.html">
+			<a href="/2019_1st_intern/aboutme/photo.html">
 				<li class=btn>내사진</li>
 			</a>
-			<a href="/aboutme/aboutme.html">
+			<a href="/2019_1st_intern/aboutme/aboutme.html">
 				<li class=btn>자기소개</li>
 			</a>
-			<a href="/aboutme/index.html">
+			<a href="/2019_1st_intern/aboutme/index.html">
 				<li class=btn>홈</li>
 			</a>
 		</ul>
 	</header>
 	<section>
-		<p style="text-align: left;">
 		<ul id='text-list' type='none'>
-			<li class='title'>이런것을 잘해요
+			<li class='title'>이런것을 잘해요</li>
 			<li class='contents'>C++, Python, OpenCV, Tensorflow, Lorem
 				ipsum dolor sit amet, consectetur adipisicing elit. Harum,
 				reiciendis similique. Quidem odit quae doloribus beatae, voluptas
 				autem error, vel commodi aspernatur qui velit consectetur sapiente
 				fuga deserunt quod itaque?</li>
+			
+			<li class='title'>나의 포트폴리오</li>
+			<li class='contents'>
+				<a href="https://github.com/SEOKHYOENCHOI"style="color: blue" target="_blank">
+					https://github.com/SEOKHYOENCHOI</a>
+					<br>저의 홈페이지입니다.
 			</li>
-			<li class='title'>나의 포트폴리오
-			<li class='contents'><a href="https://github.com/SEOKHYOENCHOI"
-				style="color: blue" target="_blank">https://github.com/SEOKHYOENCHOI</a><br>
-				저의 홈페이지입니다.</li>
-			</li>
-			<li class='title'>나의 최근 프로젝트 설명
+			
+			<li class='title'>나의 최근 프로젝트 설명</li>
 			<li class='contents'>최근 만든 프로젝트는 'Visual Code를 이용한 근거리 무선통신'입니다.
 				VS C++와 OpenCV를 활용한 영상처리 및 무선통신 분야의 프로젝트 입니다. Lorem ipsum dolor sit
 				amet, consectetur adipisicing elit. Harum, reiciendis similique.
 				Quidem odit quae doloribus beatae, voluptas autem error, vel commodi
 				aspernatur qui velit consectetur sapiente fuga deserunt quod itaque?
 			</li>
-			</li>
 		</ul>
-		</p>
-		<p style="border-bottom: 10px solid #e1e3e9"></p>
 	</section>
 	<footer>
 		<span>lkamna12@nts-corp.com</span>
