--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -4,24 +4,23 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" type="text/css" href="/aboutme/index.css">
+<link rel="stylesheet" href="/2019_1st_intern/aboutme/index.css">
+<link rel="stylesheet" href="/2019_1st_intern/aboutme/common.css">
 <title>PJT1</title>
 </head>
-<style type="text/css">
-</style>
 <body>
 	<header>
 		<ul type='none'>
-			<a href="/aboutme/today">
+			<a href="/2019_1st_intern/aboutme/today">
 				<li class=btn>몇시에요</li>
 			</a>
-			<a href="/aboutme/photo.html">
+			<a href="/2019_1st_intern/aboutme/photo.html">
 				<li class=btn>내사진</li>
 			</a>
-			<a href="/aboutme/aboutme.html">
+			<a href="/2019_1st_intern/aboutme/aboutme.html">
 				<li class=btn>자기소개</li>
 			</a>
-			<a href="/aboutme/index.html">
+			<a href="/2019_1st_intern/aboutme/index.html">
 				<li class=btn>홈</li>
 			</a>
 		</ul>
@@ -29,20 +28,20 @@
 	<section>
 		<ul type='none'>
 			<li class='title'>웹 프론트엔트 개발자</li>
-			<li class='contents'>함께 개발하고 같이 성장하고 싶어요. <br>경기도 성남시 서현동
-				어딘가 살고 있어요!
+			<li class='contents'>
+				함께 개발하고 같이 성장하고 싶어요. <br>
+				경기도 성남시 서현동 어딘가 살고 있어요!
 			</li>
 		</ul>
 		<ul id='h-t' type='none'>
-			<a href="/aboutme/aboutme.html">
+			<a href="/2019_1st_intern/aboutme/aboutme.html">
 				<li class=home-btn>자기소개</li>
 			</a>
-			<a href="/aboutme/photo.html">
+			<a href="/2019_1st_intern/aboutme/photo.html">
 				<li class=home-btn>내사진</li>
 			</a>
 		</ul>
-		<img id='map' src="/aboutme/map.JPG">
-		<p style="border-bottom: 10px solid #e1e3e9"></p>
+		<img id='map' src="/2019_1st_intern/aboutme/map.JPG">
 	</section>
 	<footer>
 		<span>lkamna12@nts-corp.com</span>
