--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -39,13 +39,11 @@ header {
 
 #first {
 	height: 600px;
-	background: pink;
 	margin: 70px 100px;
 }
 
 #second {
 	height: 600px;
-	background: green;
 	margin: 70px 100px;
 }
 
@@ -84,7 +82,7 @@ footer {
 <body>
 	<header>
 		<ul>
-			<li class="menu"><a href="index.html">몇시에요</a></li>
+			<li class="menu"><a href="today">몇시에요</a></li>
 			<li class="menu"><a href="photo.html">내사진</a></li>
 			<li class="menu"><a href="aboutme.html">자기소개</a></li>
 			<li class="menu"><a href="index.html">홈</a></li>
@@ -101,6 +99,7 @@ footer {
 				<br>이 때는 뽀뽀로의 집에서 신나게 놀던 때 입니다.
 			</div>
 		</div>
+		<hr>
 		<div id="second">
 			<div>
 				<img src="심슨.jpg" alt="현재" class="image">
