--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -76,7 +76,7 @@ footer {
 <body>
 	<header>
 		<ul>
-			<li class="menu"><a href="index.html">몇시에요</a></li>
+			<li class="menu"><a href="today">몇시에요</a></li>
 			<li class="menu"><a href="photo.html">내사진</a></li>
 			<li class="menu"><a href="aboutme.html">자기소개</a></li>
 			<li class="menu"><a href="index.html">홈</a></li>
