--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,16 +11,16 @@
 	<nav class="category_section">
 		<ul>
 			<li class="category">
-				<a href="index.html">홈</a>
+				<a href="index.html"><span>홈</span></a>
 			</li>
 			<li class="category">
-				<a href="aboutme.html">자기소개</a>
+				<a href="aboutme.html"><span>자기소개</span></a>
 			</li>
 			<li class="category">
-				<a href="photo.html">내사진</a>
+				<a href="photo.html"><span>내사진</span></a>
 			</li>
 			<li class="category">
-				<a href="today">몇시에요</a>
+				<a href="today"><span>몇시에요</span></a>
 			</li>
 		</ul>
 	</nav>
@@ -34,10 +34,10 @@
 		<div class="link_category">
 			<ul>
 				<li>
-					<a href="aboutme.html">자기소개</a>
+					<a href="aboutme.html"><span>자기소개</span></a>
 				</li>
 				<li>
-					<a href="photo.html">내사진</a>
+					<a href="photo.html"><span>내사진</span></a>
 				</li>
 			</ul>
 		</div>
