2019/1/17 수정사항 반영 완료

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
 <meta charset="utf-8">
 
@@ -38,9 +38,9 @@
 			<li class="button index_content_button"><a
 				href="/aboutme/photo.html">내사진</a></li>
 		</ul>
-		<img src="./img/map.JPG" alt="map"></img>
+		<img src="/aboutme/img/map.JPG" alt="map"></img>
 	</section>
-	
+
 	<footer>
 		<p>
 			lee.jaewon@nts-corp.com<br> https://github.com/wodnjs6512
