--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
 <meta charset="utf-8">
 
@@ -30,8 +30,8 @@
 		<article>
 			<table>
 				<tr>
-					<td><img class="photo_img" src="./img/photo1.jpg" alt="photo1"></img>
-					</td>
+					<td><img class="photo_img" src="/aboutme/img/photo1.jpg"
+						alt="photo1"></img></td>
 					<td>
 						<p>
 							2001.03.11<br> 제가 크롱일때 찍은 사진입니다.<br> 이때는 뽀로로의 집에서 신나게
@@ -74,4 +74,5 @@
 	</footer>
 
 </body>
+
 </html>
