--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 	<head>
 		<meta charset="UTF-8">
-		<title>자기소개</title>
+		<title>사진</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/photo.css"/>
