--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,10 +1,9 @@
-﻿<meta charset="utf-8">
-<link rel="stylesheet" href="./css/layout.css">
-<link rel="stylesheet" href="./css/aboutme.css">
-
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/aboutme.css">
 <title>intro</title>
 </head>
 
