대체텍스트 추가

--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -20,7 +20,7 @@
 	
 		<article>
 			<div class="photo">
-				<img src="./img/img1.jpg">
+				<img src="./img/img1.jpg" alt="photo">
 			</div>
 			
 			<div class="photo_info">
@@ -34,7 +34,7 @@
 		<article>
 			<div class="photo">
 			
-				<img src="./img/img2.jpg">
+				<img src="./img/img2.jpg" alt="photo>
 			</div>
 			<div class="photo_info">
 				
