--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,16 +13,16 @@
 			<nav>
 				<ul class="nav_list">
 					<li class="nav_item">
-						<a href="index.html">홈</a>
+						<a href="./index.html">홈</a>
 					</li>
 					<li class="nav_item">
-						<a href="aboutme.html">자기소개</a>
+						<a href="./aboutme.html">자기소개</a>
 					</li>
 					<li class="nav_item">
-						<a href="photo.html">내사진</a>
+						<a href="./photo.html">내사진</a>
 					</li>
 					<li class="nav_item">
-						<a href="today">몇시에요</a>
+						<a href="./today">몇시에요</a>
 					</li>
 				</ul>
 			</nav>
@@ -38,10 +38,10 @@
 			</p>
 			<ul class="profile_list">
 				<li class="profile_list_item">
-					<a href="aboutme.html">자기소개</a>
+					<a href="./aboutme.html">자기소개</a>
 				</li>
 				<li class="profile_list_item">
-					<a href="photo.html">내사진</a>
+					<a href="./photo.html">내사진</a>
 				</li>
 			</ul>
 			<div class="map_image_container">
