--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/photo.css">
-<title>intro</title>
+<title>photo</title>
 </head>
 
 <body>
@@ -29,19 +29,21 @@
 				<p>내가그린기린그림</p>
 				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
 			</div>
+			<div class="clear"></div>
 		</article>
 		<hr>
 		<article>
 			<div class="photo">
-			
-				<img src="./img/img2.jpg" alt="photo>
+				<img src="./img/img2.jpg" alt="photo">
 			</div>
+			
 			<div class="photo_info">
 				
 				<p>2000.00.00</p>
 				<p>내가그린기린그림</p>
 				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
 			</div>
+			<div class="clear"></div>
 		</article>
 	</div>
 	<footer>
