--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,7 +23,7 @@
 			<button class="button_square" onclick="location.href='aboutme.html'">자기소개</button>
 			<button class="button_square" onclick="location.href='photo.html'">내사진</button>
 		</p>
-		<img src="./img/집사진.jpg" />
+		<img src="./img/home_map.jpg" />
 	</div>
 
 	<footer>
