--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -16,7 +16,7 @@
 
 	<div>
 		<div class="float-container">
-			<img src="./img/어린사진.jpg" />
+			<img src="./img/aboutme_young.jpg" />
 			<p />
 			2010.03.11.
 			<p />
@@ -27,7 +27,7 @@
 		</div>
 		<hr />
 		<div class="float-container">
-			<img src="./img/결혼후사진.jpg" />
+			<img src="./img/aboutme_after_marriage.jpg" />
 			<p />
 			2020.03.11.
 			<p />
