[이슈번호 #13-10] 불필요하게 전체 경로를 지정한 것 수정
하이퍼링크 태그의 속성을 href="today"와 같이 수정했습니다.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 					<li id="menu" class="button"><a href="photo.html"
 						style="text-decoration: none">내사진</a></li>
 					<li id="menu" class="button"><a
-						href="http://localhost:8080/aboutme/today"
+						href="today"
 						style="text-decoration: none">몇시예요</a></li>
 				</ul>
 			</nav>
