--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -10,22 +10,35 @@
 <body>
 	<header>
 		<ul>
-			<li><a href="./index.html">홈</a></li>
-			<li><a href="./aboutme.html">자기소개</a></li>
-			<li><a href="./photo.html">내사진</a></li>
-			<li><a href="./today">몇시에요</a></ul>
+			<li>
+				<a href="./index.html">
+					홈
+				</a>
+			</li>
+			<li>
+				<a href="./aboutme.html">
+					자기소개
+				</a>
+			</li>
+			<li>
+				<a href="./photo.html">
+					내사진
+				</a>
+			</li>
+			<li>
+				<a href=./today>
+					몇시에요
+				</a>
+			</ul>
 		</ul>
 	</header>
 	<div class="content">
-		
 		<article>
-			
 			<h3 class="title">이런 것을 잘해요?</h3>
 			<div class="description_holder">
 				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
 			</div>
 		</article>
-		
 		<article>
 		<h3 class="title">나의 포트폴리오</h3>
 			<div class="description_holder">
@@ -37,7 +50,6 @@
 				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
 			</div>
 		</article>
-		
 		<article>
 			
 			<h3 class="title">나의 최근 프로젝트 설명</h3>
@@ -45,7 +57,6 @@
 				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
 			</div>
 		</article>
-
 	</div>
 	<footer>
 		<p>crong@codesdj.fff</p>
