--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,25 +10,45 @@
 <body>
 	<header>
 		<ul>
-			<li><a href="./index.html">홈</a></li>
-			<li><a href="./aboutme.html">자기소개</a></li>
-			<li><a href="./photo.html">내사진</a></li>
-			<li><a href=./today>몇시에요</a></ul>
-
+			<li>
+				<a href="./index.html">
+					홈
+				</a>
+			</li>
+			<li>
+				<a href="./aboutme.html">
+					자기소개
+				</a>
+			</li>
+			<li>
+				<a href="./photo.html">
+					내사진
+				</a>
+			</li>
+			<li>
+				<a href=./today>
+					몇시에요
+				</a>
+			</ul>
 		</ul>
 	</header>
 	<div class="content">
 		<h1>웹프론트엔드 개발자~! crong</h1>
 		<p>함께 개발하고 같이 성장하고 싶어요.</p>
 		<p>경시도 시흥시 장곡동 어딘가 살고있어요!</p>
-		
 		<ul>
-			<li><a href="./aboutme.html">자기소개</a></li>
-			<li><a href="./photo.html">내사진</a></li>
+			<li>
+				<a href="./aboutme.html">
+					<p>자기소개</p>
+				</a>
+			</li>
+			<li>
+				<a href="./photo.html">
+					<p>내사진</p>
+				</a>
+			</li>
 		</ul>
-		
 		<img src="./img/map.png" alt="map">
-		
 	</div>
 	<footer>
 		<p>crong@codesdj.fff</p>
