--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -6,25 +6,37 @@
 <link rel="stylesheet" href="./css/photo.css">
 <title>photo</title>
 </head>
-
 <body>
 	<header>
 		<ul>
-			<li><a href="./index.html">홈</a></li>
-			<li><a href="./aboutme.html">자기소개</a></li>
-			<li><a href="./photo.html">내사진</a></li>
-			<li><a href="./today">몇시에요</a></ul>
+			<li>
+				<a href="./index.html">
+					홈
+				</a>
+			</li>
+			<li>
+				<a href="./aboutme.html">
+					자기소개
+				</a>
+			</li>
+			<li>
+				<a href="./photo.html">
+					내사진
+				</a>
+			</li>
+			<li>
+				<a href=./today>
+					몇시에요
+				</a>
+			</ul>
 		</ul>
 	</header>
 	<div class="content">
-	
 		<article>
 			<div class="photo">
 				<img src="./img/img1.jpg" alt="photo">
 			</div>
-			
 			<div class="photo_info">
-				
 				<p>2000.00.00</p>
 				<p>내가그린기린그림</p>
 				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
@@ -36,9 +48,7 @@
 			<div class="photo">
 				<img src="./img/img2.jpg" alt="photo">
 			</div>
-			
 			<div class="photo_info">
-				
 				<p>2000.00.00</p>
 				<p>내가그린기린그림</p>
 				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
