hotfix: 오프라인 미팅 수정사항 수정

--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/aboutme_static/src/css/index.css">
-<link rel="stylesheet" href="/aboutme_static/src/css/style.css">
+<link rel="stylesheet" href="/aboutme_static/css/index.css">
+<link rel="stylesheet" href="/aboutme_static/css/style.css">
 <title>자기소개 page</title>
 </head>
 <body>
 
-	<!-- header -->
 	<header>
 		<ul id="header-ul">
 			<a href="/aboutme/index.html"><li>홈</li></a>
@@ -19,7 +17,6 @@
 		</ul>
 	</header>
 
-	<!-- section -->
 	<section>
 		<span id="title">웹 서버 사이드(java) 개발자 ~! 전연빈</span>
 		<div id="simple-my-info">
@@ -33,15 +30,14 @@
 			<a href="/aboutme/photo.html"><li>내사진</li></a>
 		</ul>
 		<div id="my-location">
-			<img alt="my_home" src="/aboutme_static/src/img/my_home.png" width="900"
-				height="600">
+			<img id="my-home" alt="my_home" src="/aboutme_static/img/my_home.png">
 		</div>
 	</section>
 
-	<!-- footer -->
 	<footer>
 		<div id="email" class="footer-info">jyb5858@nts-corp.com</div>
 		<div id="blog-url" class="footer-info">https://github.com/jeonyeonbin</div>
 	</footer>
+	
 </body>
 </html>
