--- a/WebContent/aboutme/aboutme.html
+++ b/WebContent/aboutme/aboutme.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/aboutme_static/src/css/style.css">
-<link rel="stylesheet" href="/aboutme_static/src/css/aboutme.css">
+<link rel="stylesheet" href="/aboutme_static/css/style.css">
+<link rel="stylesheet" href="/aboutme_static/css/aboutme.css">
 <title>자기소개 page</title>
 </head>
 <body>
 
-	<!-- header -->
 	<header>
 		<ul id="header-ul">
 			<a href="/aboutme/index.html"><li>홈</li></a>
@@ -19,10 +17,9 @@
 		</ul>
 	</header>
 
-	<!-- section -->
 	<section>
 		<div id="do-best" class="my-info">
-			<span class="title">이런걸 잘해요?</span>
+			<h3>이런걸 잘해요?</h3>
 			<p>
 				주로 웹어플리케이션 백엔드를 담당하여 java기반 spring framework를 이용하여 개발을 진행하였습니다.<br>
 				빅데이터 및 블록체인등에 관심이 많아 spark를 기반으로 한 장바구니 추천 시스템 개발, hyperledger를 이용한
@@ -31,7 +28,7 @@
 		</div>
 
 		<div id="portpolio" class="my-info">
-			<span class="title">나의 포트폴리오</span>
+			<h3>나의 포트폴리오</h3>
 			<p>
 				<a href="https://m.skmagic.com.my">https://m.skmagic.com.my</a><br>
 				웅진 인턴시절에 개발한 모바일 웹 어플리케이션 입니다<br>
@@ -41,7 +38,7 @@
 		</div>
 
 		<div id="my-project" class="my-info">
-			<span class="title">나의 최근 프로젝트 설명</span>
+			<h3>나의 최근 프로젝트 설명</h3>
 			<p>
 				Node Spring 두 개의 프레임워크를 이용하여 웹 어플리케이션 제작한 경험이 있으며 <br> 
 				최근 프로젝트로 웅진에서 SK Magic 모바일 웹 어플리케이션을 제작하였습니다.<br>
@@ -51,10 +48,10 @@
 		</div>
 	</section>
 
-	<!-- footer -->
 	<footer>
 		<div id="email" class="footer-info">jyb5858@nts-corp.com</div>
 		<div id="blog-url" class="footer-info">https://github.com/jeonyeonbin</div>
 	</footer>
+	
 </body>
 </html>
