--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -10,40 +10,24 @@
 <body>
 	<header>
 		<ul>
-			<li>
-				<a href="./index.html">
-					홈
-				</a>
-			</li>
-			<li>
-				<a href="./aboutme.html">
-					자기소개
-				</a>
-			</li>
-			<li>
-				<a href="./photo.html">
-					내사진
-				</a>
-			</li>
-			<li>
-				<a href=./today>
-					몇시에요
-				</a>
-			</ul>
+			<li><a href="./index.html">홈</a></li>
+			<li><a href="./aboutme.html">자기소개</a></li>
+			<li><a href="./photo.html">내사진</a></li>
+			<li><a href=./today>몇시에요</a></ul>
 		</ul>
 	</header>
 	<div class="content">
 		<article>
 			<h3 class="title">이런 것을 잘해요?</h3>
 			<div class="description_holder">
-				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
 			</div>
 		</article>
 		<article>
 		<h3 class="title">나의 포트폴리오</h3>
 			<div class="description_holder">
 				<p class="description">www.my.com</p>
-				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p class="description">제홈페이집니다.</p>
 			</div>
 			<div class="description_holder">
 				<p class="description">www.github.com</p>
@@ -54,7 +38,7 @@
 			
 			<h3 class="title">나의 최근 프로젝트 설명</h3>
 			<div class="description_holder">
-				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
 			</div>
 		</article>
 	</div>
