--- a/WebContent/aboutme/index.html
+++ b/WebContent/aboutme/index.html
@@ -18,7 +18,7 @@
 	</header>
 
 	<section>
-		<span id="title">웹 서버 사이드(java) 개발자 ~! 전연빈</span>
+		<h2>웹 서버 사이드(java) 개발자 ~! 전연빈</h2>
 		<div id="simple-my-info">
 			<p>
 				함께 개발하고 같이 성장하고 싶어요<br> 
