--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -17,7 +17,7 @@
 					<li id="menu" class="button"><a href="photo.html"
 						style="text-decoration: none">내사진</a></li>
 					<li id="menu" class="button"><a
-						href="http://localhost:8080/aboutme/today"
+						href="today"
 						style="text-decoration: none">몇시예요</a></li>
 				</ul>
 			</nav>
