특정 태그(div,p)를 불필요하게 사용하는 부분 삭제, 이전 디자인을 유지하기 위해 CSS 조절

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,18 +32,12 @@
 		<!--페이지별로 구별되는 section-->
 		<section class="container">
 			<h2>웹프론트엔드 개발자~! crong</h2>
-			
-			<p>함께 개발하고 같이성장하고 싶어요 <br>경기도 시흥시 창곡동 어딘가 살고 있어요!</p>
-			
-			<a href="aboutme.html">
-				<div>자기소개</div>
-			</a>
-			
-			<a href="photo.html">
-				<div>내사진</div>
-			</a>
-			
-			<br><img src="image/map.jpg" alt="지도 이미지">
+			함께 개발하고 같이성장하고 싶어요 <br>경기도 시흥시 창곡동 어딘가 살고 있어요!
+			<br><br>
+			<a href="aboutme.html" class="center_button">자기소개</a>
+			<a href="photo.html" class="center_button">내사진</a>
+			<br>
+			<img src="image/map.jpg" alt="지도 이미지">
 		</section>
 	
 		<!--고정 하단 footer-->
