--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="description_holder">
 				<p class="description">www.github.com</p>
-				<p class="description">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p class="description">저의 깃허브입니다</p>
 			</div>
 		</article>
 		<article>
