--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -23,7 +23,7 @@
 			<div class="photo_info">
 				<p>2000.00.00</p>
 				<p>내가그린기린그림</p>
-				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p>어렸을때 그린 그림입니다</p>
 			</div>
 			<div class="clear"></div>
 		</article>
@@ -34,8 +34,8 @@
 			</div>
 			<div class="photo_info">
 				<p>2000.00.00</p>
-				<p>내가그린기린그림</p>
-				<p>내용@!내용ㅇㅇ내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</p>
+				<p>내가두번째그린기린그림</p>
+				<p>몇달 전에 그린 그림입니다</p>
 			</div>
 			<div class="clear"></div>
 		</article>
