설계서에 맞게 웹디자인 변경

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -14,16 +14,15 @@
 		<button class="button_nav" onclick="location.href='today'">몇시에요</button>
 	</nav>
 
-	<div>
-		<h2>이런 것을 잘해요?</h2>
+	<div id="aboutme">
+		<span class="title">이런 것을 잘해요?</span>
 		<p>
 			저는 매운것을 잘먹습니다.<br /> 하지만 매운것을 먹고나면 배가아프기 때문에 자주먹지는 않습니다.
 		</p>
-
-		<h2>재밌게 본 영화</h2>
+		<span class="title">재밌게 본 영화</span>
 		<p>범죄도시 인터스텔라 나홀로집에 덩케르크 겨울왕국 아이언맨 토르 아쿠아맨 등등</p>
 
-		<h2>나의 최근 프로젝트 설명</h2>
+		<span class="title">나의 최근 프로젝트 설명</span>
 		<p>나를 소개하는 홈페이지 만들기 [html/css/서블릿]</p>
 	</div>
 
