--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 		<button class="button_nav" onclick="location.href='today'">몇시에요</button>
 	</nav>
 
-	<div id ="main">
+	<div id ="index_main">
 		<h1>웹 프론트엔드 개발자~! 배진우</h1>
 		<p>
 			함께 개발하고 같이성장하고 싶어요<br /> 경기도 성남시 분당구 어딘가 살고 있어요!<br />
