--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -17,26 +17,21 @@
 	<div>
 		<div class="float-container">
 			<img src="./img/aboutme_young.jpg" />
-			<p />
-			2010.03.11.
-			<p />
-			저의 어린시절 찍은 사진입니다.
-			<p />
-			이때는 집에서 신나게 놀던때입니다.
-			<p />
+			<p>
+				2010.03.11.<br/>
+				저의 어린시절 찍은 사진입니다.<br/>
+				이때는 집에서 신나게 놀던때입니다.<br/>
+			</p>
 		</div>
 		<hr />
 		<div class="float-container">
 			<img src="./img/aboutme_after_marriage.jpg" />
-			<p />
-			2020.03.11.
-			<p />
-			결혼후 찍은 사진입니다..
-			<p />
-			건강한 모습이 보기좋습니다.
-			<p />
-			줄간격과 글자크기는 일관되며 동일해야함.
-			<p />
+			<p>
+				2020.03.11.<br/>
+				결혼후 찍은 사진입니다..<br/>
+				건강한 모습이 보기좋습니다.<br/>
+				줄간격과 글자크기는 일관되며 동일해야함.<br/>
+			<p/>
 		</div>
 	</div>
 
