UI수정 - 가로길이

--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -35,7 +35,7 @@
 			<div class="photo_info">
 				<p>2000.00.00</p>
 				<p>내가두번째그린기린그림</p>
-				<p>몇달 전에 그린 그림입니다</p>
+				<p>몇달 전에 그린 그림입니다.다섯살때부터 나는 피아노를 쳤어 영재였지 베토벤부터 모짜르트 바흐 쇼팽 선배였지 허나 나난 걸 접고서 가사를 썼어 열넷이였지 난 이게 참 좋아 그건 못 벌어 그새끼들 모두 엿먹어 </p>
 			</div>
 			<div class="clear"></div>
 		</article>
