--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,8 +18,7 @@
 	</header>
 	<div class="content">
 		<h1>웹프론트엔드 개발자~! crong</h1>
-		<p>함께 개발하고 같이 성장하고 싶어요.</p>
-		<p>경시도 시흥시 장곡동 어딘가 살고있어요!</p>
+		<p>함께 개발하고 같이 성장하고 싶어요.<br>경시도 시흥시 장곡동 어딘가 살고있어요!</p>
 		<ul>
 			<li>
 				<a href="./aboutme.html">
