--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,8 +34,7 @@
 		<img src="./img/map.png" alt="map">
 	</div>
 	<footer>
-		<p>crong@codesdj.fff</p>
-		<p>http://aaa.aaa.aaa</p>
+		<p>crong@codesdj.fff<br>http://aaa.aaa.aaa</p>
 	</footer>
 </body>
 </html>
