불필요한 p태그 삭제

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -43,8 +43,7 @@
 		</article>
 	</div>
 	<footer>
-		<p>crong@codesdj.fff</p>
-		<p>http://aaa.aaa.aaa</p>
+		<p>crong@codesdj.fff<br>http://aaa.aaa.aaa</p>
 	</footer>
 </body>
 </html>
