--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -21,9 +21,7 @@
 				<img src="./img/img1.jpg" alt="photo">
 			</div>
 			<div class="photo_info">
-				<p>2000.00.00</p>
-				<p>내가그린기린그림</p>
-				<p>어렸을때 그린 그림입니다</p>
+				<p>2000.00.00<br>내가그린기린그림<br>어렸을때 그린 그림입니다</p>
 			</div>
 			<div class="clear"></div>
 		</article>
@@ -33,16 +31,13 @@
 				<img src="./img/img2.jpg" alt="photo">
 			</div>
 			<div class="photo_info">
-				<p>2000.00.00</p>
-				<p>내가두번째그린기린그림</p>
-				<p>몇달 전에 그린 그림입니다.다섯살때부터 나는 피아노를 쳤어 영재였지 베토벤부터 모짜르트 바흐 쇼팽 선배였지 허나 나난 걸 접고서 가사를 썼어 열넷이였지 난 이게 참 좋아 그건 못 벌어 그새끼들 모두 엿먹어 </p>
+				<p>2000.00.00<br>내가두번째그린기린그림<br>몇달 전에 그린 그림입니다.다섯살때부터 나는 피아노를 쳤어 영재였지 베토벤부터 모짜르트 바흐 쇼팽 선배였지 허나 나난 걸 접고서 가사를 썼어 열넷이였지 난 이게 참 좋아 그건 못 벌어 그새끼들 모두 엿먹어 </p>
 			</div>
 			<div class="clear"></div>
 		</article>
 	</div>
 	<footer>
-		<p>crong@codesdj.fff</p>
-		<p>http://aaa.aaa.aaa</p>
+		<p>crong@codesdj.fff<br>http://aaa.aaa.aaa</p>
 	</footer>
 </body>
 </html>
