--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -18,16 +18,16 @@
 
 	<section class="clear content_background">
 		<div class="wrap">
-			<div class="paragraph">
+			<article class="paragraph">
 				<h2 class="h2_with_text" style="margin-bottom: 0px;">이런 것을 잘해요?</h2>
 				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-			</div>
+			</article>
 
 			<br>
 
-			<div class="paragraph">
+			<article class="paragraph">
 				<h2>나의 포트폴리오</h2>
 				<p>
 				<a href="https://www.nts-corp.com/">www.my.com</a><br>
@@ -37,16 +37,16 @@
 				제가 주로 개발하는 소스코드 입니다. 이곳에서 많은 부분을 확인할 수 있습니다.
 
 				</p>
-			</div>
+			</article>
 
 			<br>
 
-			<div class="paragraph">
+			<article class="paragraph">
 				<h2>나의 최근 프로젝트 설명</h2>
 				<p>
 				최근 만든 프로젝트는 PJT.1입니다. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-			</div>
+			</article>
 		</div>
 
 	</section>
