--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -17,18 +17,18 @@
 	</nav>
 
 	<section class="clear content_background">
-		<div class="photo_post">
+		<article class="photo_post">
 			<img src="../img/pororo.png" class="image_border left">
 			<p class="left">
 				2001.03.11<br>
 				제가 뽀로로일 때 찍은 사진입니다.<br>
 				이때는 크롱의 집에서 신나게 놀던 때입니다.
 			</p>
-		</div>
+		</article>
 		<!-- 이렇게 처리하는게 맞는지... -->
 		<br class="clear">
 		<hr>
-		<div class="photo_post">
+		<article class="photo_post">
 			<img src="../img/pororo_natural.jpg" class="image_border left">
 			<p class="left">
 				2001.03.11<br>
@@ -36,7 +36,7 @@
 				건강한 모습을유지하고 있습니다.<br>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
-		</div>
+		</article>
 		<br class="clear">
 	</section>
 
