--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -31,7 +31,7 @@
 				<img src="./img/img2.jpg" alt="photo">
 			</div>
 			<div class="photo_info">
-				<p>2000.00.00<br>내가두번째그린기린그림<br>몇달 전에 그린 그림입니다.다섯살때부터 나는 피아노를 쳤어 영재였지 베토벤부터 모짜르트 바흐 쇼팽 선배였지 허나 나난 걸 접고서 가사를 썼어 열넷이였지 난 이게 참 좋아 그건 못 벌어 그새끼들 모두 엿먹어 </p>
+				<p>2000.00.00<br>내가두번째그린기린그림<br>명왕성의 위성들은 불안정하게 흔들린다. 명왕성에는 위성이 5개 있다. 카론은 구형이고, 주천체에 비해 특이하게 큰 반면, 닉스와 히드라, 케르베로스, 스틱스는 작고 불규칙하게 생긴 덩어리이다. 카론과 명왕성은 조석 고정이 일어나 항상 서로 같은 면을 바라보고 있다. 나머지 위성들은 그렇지 않다. 2015년, 허블 망원경은 닉스와 히드라에 반사돼 나오는 빛에서 비정상적인 변이를 관측했다.</p>
 			</div>
 			<div class="clear"></div>
 		</article>
