div태그 제거, img alt속성 추가, 재사용할수 있도록 selector 세분화, 태그 속성 변경 최대한 지양하도록 변경

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
+		<link rel="stylesheet" type="text/css" href="/css/common.css"/>
 		<meta charset="UTF-8">
 		<title>자기소개</title>
 	</head>
-	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
 	<body id="background">
+	
 		<header>
 			<nav class="menu-nav">
-				<ul class="menu">
+				<ul class="menu horizontal-list">
 					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
 					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
 					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
@@ -16,32 +17,35 @@
 				</ul>
 			</nav>
 		</header>
+		
 		<section>
-			<ul class="content-list">
+			<ul>
 				<li class="content">
-					<div class="title">이런것을 잘해요</div>
-					<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</div>
+					<h1 class="title">이런것을 잘해요</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</p>
 				</li>
 				<li class="content">
-					<div class="title">내가 쓰는 웹사이트</div>
-					<div><a href="http://www.naver.com">http://www.naver.com</a></div>
-					<div>네이버에요</div>
-					<div><a href="http://www.github.com">http://www.github.com</a></div>
-					<div>깃헙이에요</div>
+					<h1 class="title">내가 쓰는 웹사이트</h1>
+					<p>
+						<a href="http://www.naver.com">http://www.naver.com</a><br>
+						네이버에요<br>
+						<a href="http://www.github.com">http://www.github.com</a><br>
+						깃헙이에요
+					</p>
 				</li>
 				<li class="content">
-					<div class="title">나의 최근 프로젝트 설명</div>
-					<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</div>
+					<h1 class="title">나의 최근 프로젝트 설명</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus, corporis, dolorum fugiat tenetur porro. Aspernatur commodi, ea suscipit non? Molestiae nulla explicabo debitis provident nostrum dolorem minima reiciendis suscipit?</p>
 				</li>
-				
-				
 			</ul>
 		</section>
+		
 		<footer>
-			<div id="web-address">
-				<div>life4lord93@nts-corp.com</div>
-				<div>https://gitlab.com/n_tech_service/2019_1st_intern</div>
-			</div>
+			<p class="center">
+				life4lord93@nts-corp.com<br>
+				https://gitlab.com/n_tech_service/2019_1st_intern
+			</p>
 		</footer>
+		
 	</body>
 </html>
