--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
-		<link rel="stylesheet" type="text/css" href="/css/common.css"/>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="/css/common.css"/>
 		<title>메인 화면</title>
 	</head>
 	<body id="background">
@@ -10,10 +10,10 @@
 		<header>
 			<nav class="menu-nav">
 				<ul class="menu horizontal-list">
-					<a href="/index.html"><li class="menu-item square-box hover-box">홈</li></a>
-					<a href="/aboutme.html"><li class="menu-item square-box hover-box">자기소개</li></a>
-					<a href="/photo.html"><li class="menu-item square-box hover-box">내사진</li></a>
-					<a href="/aboutme/today"><li class="menu-item square-box hover-box">몇시에요</li></a>
+					<a href="/index.html"><li class="menu-item square-box">홈</li></a>
+					<a href="/aboutme.html"><li class="menu-item square-box">자기소개</li></a>
+					<a href="/photo.html"><li class="menu-item square-box">내사진</li></a>
+					<a href="/aboutme/today"><li class="menu-item square-box">몇시에요</li></a>
 				</ul>
 			</nav>
 		</header>
@@ -25,8 +25,8 @@
 				경기도 성남시 분당구 어딘가 살고 있어요!
 			</p>
 			<ul class="horizontal-list">
-				<a href="/aboutme.html"><li class="link-content square-box hover-box">자기소개</li></a>
-				<a href="/photo.html"><li class="link-content square-box hover-box">내사진</li></a>
+				<a href="/aboutme.html"><li class="link-content square-box">자기소개</li></a>
+				<a href="/photo.html"><li class="link-content square-box">내사진</li></a>
 			</ul>
 			<img alt="서현역 지도" class="map" src="/img/map.PNG"/>
 		</section>
