오프라인 리뷰 후 전체 수정 완료

--- a/WebContent/aboutme/aboutme.html
+++ b/WebContent/aboutme/aboutme.html
@@ -3,57 +3,64 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/2019_1st_intern/aboutme/aboutme.css">
-<link rel="stylesheet" href="/2019_1st_intern/aboutme/common.css">
+<link rel="stylesheet" href="/aboutme/aboutme.css">
+<link rel="stylesheet" href="/aboutme/common.css">
 <title>PJT1</title>
 </head>
 
 
 <body>
+
 	<header>
-		<ul type='none'>
-			<a href="/2019_1st_intern/aboutme/today">
+		<ul type="none">
+			<a href="/aboutme/today">
 				<li class=btn>몇시에요</li>
 			</a>
-			<a href="/2019_1st_intern/aboutme/photo.html">
+			
+			<a href="/aboutme/photo.html">
 				<li class=btn>내사진</li>
 			</a>
-			<a href="/2019_1st_intern/aboutme/aboutme.html">
+			
+			<a href="/aboutme/aboutme.html">
 				<li class=btn>자기소개</li>
 			</a>
-			<a href="/2019_1st_intern/aboutme/index.html">
+			
+			<a href="/aboutme/index.html">
 				<li class=btn>홈</li>
 			</a>
 		</ul>
 	</header>
-	<section>
-		<ul id='text-list' type='none'>
-			<li class='title'>이런것을 잘해요</li>
-			<li class='contents'>C++, Python, OpenCV, Tensorflow, Lorem
+	
+	<section id = "introduce">
+			<div class="title">이런것을 잘 해요</div>
+			<p class="contents">
+				C++, Python, OpenCV, Tensorflow, Lorem
 				ipsum dolor sit amet, consectetur adipisicing elit. Harum,
 				reiciendis similique. Quidem odit quae doloribus beatae, voluptas
 				autem error, vel commodi aspernatur qui velit consectetur sapiente
-				fuga deserunt quod itaque?</li>
+				fuga deserunt quod itaque?
+			</p>
 			
-			<li class='title'>나의 포트폴리오</li>
-			<li class='contents'>
-				<a href="https://github.com/SEOKHYOENCHOI"style="color: blue" target="_blank">
+			<div class="title">나의 포트폴리오</div>
+			<p class="contents">
+				<a id="my_page" href="https://github.com/SEOKHYOENCHOI">
 					https://github.com/SEOKHYOENCHOI</a>
 					<br>저의 홈페이지입니다.
-			</li>
+			</p>
 			
-			<li class='title'>나의 최근 프로젝트 설명</li>
-			<li class='contents'>최근 만든 프로젝트는 'Visual Code를 이용한 근거리 무선통신'입니다.
+			<div class="title">나의 최근 프로젝트 설명</div>
+			<p class="contents">
+				최근 만든 프로젝트는 'Visual Code를 이용한 근거리 무선통신'입니다.
 				VS C++와 OpenCV를 활용한 영상처리 및 무선통신 분야의 프로젝트 입니다. Lorem ipsum dolor sit
 				amet, consectetur adipisicing elit. Harum, reiciendis similique.
 				Quidem odit quae doloribus beatae, voluptas autem error, vel commodi
 				aspernatur qui velit consectetur sapiente fuga deserunt quod itaque?
-			</li>
-		</ul>
+			</p>
 	</section>
+	
 	<footer>
 		<span>lkamna12@nts-corp.com</span>
 	</footer>
+	
 </body>
 </html>
