불필요한 div, p태그 삭제

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -19,31 +19,20 @@
 	<div class="content">
 		<article>
 			<h3 class="title">이런 것을 잘해요?</h3>
-			<div class="description_holder">
-				<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
-			</div>
+			<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
 		</article>
 		<article>
 		<h3 class="title">나의 포트폴리오</h3>
-			<div class="description_holder">
-				<p class="description">www.my.com</p>
-				<p class="description">제홈페이집니다.</p>
-			</div>
-			<div class="description_holder">
-				<p class="description">www.github.com</p>
-				<p class="description">저의 깃허브입니다</p>
-			</div>
+			<p class="description">www.my.com<br>제홈페이집니다.</p>
+			<p class="description">www.github.com<br>저의 깃허브입니다</p>
 		</article>
 		<article>
-			
 			<h3 class="title">나의 최근 프로젝트 설명</h3>
-			<div class="description_holder">
-				<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
-			</div>
+			<p class="description">Starting from Android 6.0 (API level 23), Android introduces two power-saving features that extend battery life for users by managing how apps behave when a device is not connected to a power source. Doze reduces battery consumption by deferring background CPU and network activity for apps when the device is unused for long periods of time. App Standby defers background network activity for apps with which the user has not recently interacted.</p>
 		</article>
 	</div>
 	<footer>
-		<p>crong@codesdj.fff<br>http://aaa.aaa.aaa</p>
+		crong@codesdj.fff<br>http://aaa.aaa.aaa
 	</footer>
 </body>
 </html>
