--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,23 +18,19 @@
 	</header>
 	<div class="content">
 		<h1>웹프론트엔드 개발자~! crong</h1>
-		<p>함께 개발하고 같이 성장하고 싶어요.<br>경시도 시흥시 장곡동 어딘가 살고있어요!</p>
+		함께 개발하고 같이 성장하고 싶어요.<br>경시도 시흥시 장곡동 어딘가 살고있어요!
 		<ul>
 			<li>
-				<a href="./aboutme.html">
-					<p>자기소개</p>
-				</a>
+				<a href="./aboutme.html"><p>자기소개</p></a>
 			</li>
 			<li>
-				<a href="./photo.html">
-					<p>내사진</p>
-				</a>
+				<a href="./photo.html"><p>내사진</p></a>
 			</li>
 		</ul>
 		<img src="./img/map.png" alt="map">
 	</div>
 	<footer>
-		<p>crong@codesdj.fff<br>http://aaa.aaa.aaa</p>
+		crong@codesdj.fff<br>http://aaa.aaa.aaa
 	</footer>
 </body>
 </html>
