--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>About ME</title>
 </head>
 <body class="body_background">
@@ -12,7 +12,7 @@
 			<li><a href="index.html">홈</a></li>
 			<li><a href="aboutme.html">자기소개</a></li>
 			<li><a href="photo.html">내사진</a></li>
-			<li><a href="../today">몇시에요</a></li>
+			<li><a href="today">몇시에요</a></li>
 		</ul>
 	</nav>
 
