--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Photo</title>
 </head>
 <body class="body_background">
@@ -12,13 +12,13 @@
 			<li><a href="index.html">홈</a></li>
 			<li><a href="aboutme.html">자기소개</a></li>
 			<li><a href="photo.html">내사진</a></li>
-			<li><a href="../today">몇시에요</a></li>
+			<li><a href="today">몇시에요</a></li>
 		</ul>
 	</nav>
 
 	<section class="clear content_background">
 		<article class="photo_post">
-			<img src="../img/pororo.png" class="image_border left">
+			<img src="img/pororo.png" class="image_border left">
 			<p class="left">
 				2001.03.11<br>
 				제가 뽀로로일 때 찍은 사진입니다.<br>
@@ -29,7 +29,7 @@
 		<br class="clear">
 		<hr>
 		<article class="photo_post">
-			<img src="../img/pororo_natural.jpg" class="image_border left">
+			<img src="img/pororo_natural.jpg" class="image_border left">
 			<p class="left">
 				2001.03.11<br>
 				씻고난 후에는 이런 모습이네요. @.@<br>
