--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -5,49 +5,37 @@
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <title>자기소개</title>
 </head>
-<body>
-	<header>
-		<section id="nav-menu">
-			<nav class="container">
-				<ul id="menu">
-					<li id="menu" class="button"><a href="index.html"
-						style="text-decoration: none">홈</a></li>
-					<li id="menu" class="button"><a href="aboutme.html"
-						style="text-decoration: none">자기소개</a></li>
-					<li id="menu" class="button"><a href="photo.html"
-						style="text-decoration: none">내사진</a></li>
-					<li id="menu" class="button"><a
-						href="today"
-						style="text-decoration: none">몇시예요</a></li>
-				</ul>
-			</nav>
+<body class="body-aqua">
+	<header class="container-white">
+		<section class="overflow-auto">
+			<ul>
+				<li class="li-button float-right"><a href="today">몇시예요</a></li>
+				<li class="li-button float-right"><a href="photo.html">내사진</a></li>
+				<li class="li-button float-right"><a href="aboutme.html">자기소개</a></li>
+				<li class="li-button float-right"><a href="index.html">홈</a></li>
+			</ul>
 		</section>
 	</header>
-
-	<section id="nav-aboutme">
-		<nav class="container">
-			<p>
+	<section id="section-aboutme" class="container-white padding-20px">
+		<article class="article-aboutme">
 			<h1>이런 것을 잘해요?</h1>
 			내용
-			</p>
-			<p class="paragraph">
+		</article>
+		<article class="article-aboutme">
 			<h1>나의 포트폴리오</h1>
 			내용
-			</p>
-			<p class="paragraph">
+		</article>
+		<article class="article-aboutme">
 			<h1>나의 최근 프로젝트 설명</h1>
 			내용
-			</p>
-		</nav>
+		</article>
 	</section>
-	<footer>
-		<section id="nav-profile">
-			<nav class="container">
-				<ul>
-					duik.park@nts-corp.com
-					<br> https://gitlab.com/duik.park
-				</ul>
-			</nav>
+	<footer class="container-white">
+		<section class="profile">
+			<ul>
+				duik.park@nts-corp.com
+				<br> https://gitlab.com/duik.park
+			</ul>
 		</section>
 	</footer>
 </body>
