--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,48 +5,34 @@
 <link rel="stylesheet" type="text/css" href="css/base.css" />
 <title>메인화면</title>
 </head>
-<body id="index">
-	<header>
-		<section id="nav-menu">
-			<nav class="container">
-				<ul id="menu">
-					<li id="menu" class="button"><a href="index.html"
-						style="text-decoration: none">홈</a></li>
-					<li id="menu" class="button"><a href="aboutme.html"
-						style="text-decoration: none">자기소개</a></li>
-					<li id="menu" class="button"><a href="photo.html"
-						style="text-decoration: none">내사진</a></li>
-					<li id="menu" class="button"><a
-						href="today"
-						style="text-decoration: none">몇시예요</a></li>
-				</ul>
-			</nav>
+<body class="body-aqua">
+	<header class="container-white">
+		<section class="overflow-auto">
+			<ul>
+				<li class="li-button float-right"><a href="today">몇시예요</a></li>
+				<li class="li-button float-right"><a href="photo.html">내사진</a></li>
+				<li class="li-button float-right"><a href="aboutme.html">자기소개</a></li>
+				<li class="li-button float-right"><a href="index.html">홈</a></li>
+			</ul>
 		</section>
 	</header>
-
-	<section id="nav-index">
-		<nav class="container">
+	<section id="section-index" class="container-white padding-20px">
+		<article>
 			<h1>웹프론트엔드 개발자~! 두익</h1>
 			함께 개발하고 같이 성장하고 싶어요<br> 경기도 성남시 서현동 어딘가 살고 있어요!
-
-			<ul id="content">
-				<li id="content" class="button"><a href="aboutme.html"
-					style="text-decoration: none">자기소개</a></li>
-				<li id="content" class="button"><a href="photo.html"
-					style="text-decoration: none">내사진</a></li>
+			<ul>
+				<li class="li-button"><a href="aboutme.html">자기소개</a></li>
+				<li class="li-button"><a href="photo.html">내사진</a></li>
 			</ul>
-
-			<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
-		</nav>
+		</article>
+		<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
 	</section>
-	<footer>
-		<section id="nav-profile">
-			<nav class="container">
-				<ul>
-					duik.park@nts-corp.com
-					<br> https://gitlab.com/duik.park
-				</ul>
-			</nav>
+	<footer class="container-white">
+		<section class="profile">
+			<ul>
+				duik.park@nts-corp.com
+				<br> https://gitlab.com/duik.park
+			</ul>
 		</section>
 	</footer>
 </body>
