불필요한 태그 제거

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -6,7 +6,7 @@
 <title>자기소개</title>
 </head>
 <body class="body-aqua">
-	<header class="container-white">
+	<header class="container-white padding-20px">
 		<section class="overflow-auto">
 			<ul>
 				<li class="li-button float-right"><a href="today">몇시예요</a></li>
@@ -30,12 +30,10 @@
 			내용
 		</article>
 	</section>
-	<footer class="container-white">
+	<footer class="container-white padding-20px">
 		<section class="profile">
-			<ul>
-				duik.park@nts-corp.com
-				<br> https://gitlab.com/duik.park
-			</ul>
+			duik.park@nts-corp.com
+			<br> https://gitlab.com/duik.park
 		</section>
 	</footer>
 </body>
