--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,7 +6,7 @@
 <title>메인화면</title>
 </head>
 <body class="body-aqua">
-	<header class="container-white">
+	<header class="container-white padding-20px">
 		<section class="overflow-auto">
 			<ul>
 				<li class="li-button float-right"><a href="today">몇시예요</a></li>
@@ -27,12 +27,10 @@
 		</article>
 		<img src="img/map.PNG" alt="경기도 성남시 서현동 지도">
 	</section>
-	<footer class="container-white">
+	<footer class="container-white padding-20px">
 		<section class="profile">
-			<ul>
-				duik.park@nts-corp.com
-				<br> https://gitlab.com/duik.park
-			</ul>
+			duik.park@nts-corp.com
+			<br> https://gitlab.com/duik.park
 		</section>
 	</footer>
 </body>
