--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -6,7 +6,7 @@
 <title>내사진</title>
 </head>
 <body class="body-aqua">
-	<header class="container-white">
+	<header class="container-white padding-20px">
 		<section class="overflow-auto">
 			<ul>
 				<li class="li-button float-right"><a href="today">몇시예요</a></li>
@@ -35,15 +35,12 @@
 				2001.03.11 <br>결혼한 후에는 이런 모습이네요. @.@ <br>건강한 모습을 유지하고
 				있습니다.
 			</div>
-			</ul>
 		</article>
 	</section>
-	<footer class="container-white">
+	<footer class="container-white padding-20px">
 		<section class="profile">
-			<ul>
-				duik.park@nts-corp.com
-				<br> https://gitlab.com/duik.park
-			</ul>
+			duik.park@nts-corp.com
+			<br> https://gitlab.com/duik.park
 		</section>
 	</footer>
 </body>
