--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>메인화면 페이지</title>
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 	<nav>
@@ -14,7 +15,7 @@
 		<button class="button_nav" onclick="location.href='today'">몇시에요</button>
 	</nav>
 
-	<div id ="index_main">
+	<section>
 		<h1>웹 프론트엔드 개발자~! 배진우</h1>
 		<p>
 			함께 개발하고 같이성장하고 싶어요<br /> 경기도 성남시 분당구 어딘가 살고 있어요!<br />
@@ -24,7 +25,7 @@
 			<button class="button_square" onclick="location.href='photo.html'">내사진</button>
 		</p>
 		<img src="./img/home_map.jpg" />
-	</div>
+	</section>
 
 	<footer>
 		<span>Copyright @배진우</span>
