aboutme.html 본문 내용 추가

--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -18,16 +18,19 @@
 	</header>
 	<section id="section-aboutme" class="container-white padding-20px">
 		<article class="article-aboutme">
-			<h1>이런 것을 잘해요?</h1>
-			내용
+			<p><h1>이런 것을 잘해요?</h1></p>
+			HTML, CSS, 서블릿을 사용해 나를 소개하는 홈페이지 만들기
+			<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 		</article>
 		<article class="article-aboutme">
-			<h1>나의 포트폴리오</h1>
-			내용
+			<p><h1>나의 포트폴리오</h1></p>
+			<a href="https://www.nts-corp.com/">NTS</a> 소속이며
+			<br><a href="https://gitlab.com/">Gitlab</a>을 사용해 프로젝트를 진행하고 있습니다.
 		</article>
 		<article class="article-aboutme">
-			<h1>나의 최근 프로젝트 설명</h1>
-			내용
+			<p><h1>나의 최근 프로젝트 설명</h1></p>
+			현재 나를 소개하는 홈페이지를 만들고 있습니다.
+			<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 		</article>
 	</section>
 	<footer class="container-white padding-20px">
