--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8">
-		<title>Insert title here</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css" />
+		<title>Insert title here</title>
 	</head>
 	<body>
 		<span class="page_title">나의 해야할 일들</span>
-		<a href="" class="btn"><span class="right box">새로운 TODO 등록</span></a>
+		<a href="/newtodo.html"><span class="right box">새로운 TODO 등록</span></a>
 		
 		<section class="todo_section">
 		
