--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,10 +9,10 @@
 	<header class="container-white padding-20px">
 		<section class="overflow-auto">
 			<ul>
-				<li class="li-button float-right"><a href="today">몇시예요</a></li>
-				<li class="li-button float-right"><a href="photo.html">내사진</a></li>
-				<li class="li-button float-right"><a href="aboutme.html">자기소개</a></li>
-				<li class="li-button float-right"><a href="index.html">홈</a></li>
+				<li class="li-button float-right"><a href="/aboutme/today">몇시예요</a></li>
+				<li class="li-button float-right"><a href="/aboutme/photo.html">내사진</a></li>
+				<li class="li-button float-right"><a href="/aboutme/aboutme.html">자기소개</a></li>
+				<li class="li-button float-right"><a href="/aboutme/index.html">홈</a></li>
 			</ul>
 		</section>
 	</header>
