주석 및 명명법 변경, img와 css 폴더 정리, static 사용

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,75 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>메인화면 페이지</title>
-
-<style>
-body {
-	background: aqua;
-	height: 80%;
-}
-
-header {
-	margin-top: 20px;
-	line-height: 50px;
-	background: white;
-	overflow: auto;
-}
-
-#main {
-	height: 1200px;
-	background: white;
-	margin: 20px 0px;
-	text-align: center;
-	padding: 30px 0;
-	overflow: auto;
-}
-
-.menu {
-	display: block;
-	float: right;
-	margin: 10px 10px 20px 10px;
-	background: olive;
-	width: 100px;
-	height: 50px;
-	text-align: center;
-	font-size: small;
-	box-shadow: 1px 1px 1px 1px gray;
-}
-
-.submenu {
-	display: inline-block;
-	margin: 0px 10px;
-	background: olive;
-	width: 100px;
-	height: 100px;
-	text-align: center;
-	box-shadow: 1px 1px 1px 1px gray;
-}
-
-.wrapper {
-	margin-top: 40%;
-}
-
-.first {
-	margin: 10px 0;
-	font-size: 30px;
-}
-
-#foot {
-	padding: 10px;
-}
-
-.bot {
-	display: block;
-}
-
-footer {
-	margin: 10px 0;
-	height: 100px;
-	text-align: center;
-	background: white;
-}
-</style>
+<link rel="stylesheet" href="/aboutme/css/style.css">
 </head>
 <body>
 	<header>
@@ -101,14 +33,14 @@ footer {
 					</div>
 				</li>
 			</ul>
-			<img src="home.png" alt="우리집">
+			<img src="/aboutme/img/home.png" alt="우리집">
 		</article>
 	</section>
 	<footer>
 		<div id="foot">
 			<ul>
 				<li class="bot"><a href="giyong.kim@nts-corp.com">giyong.kim@nts-corp.com</a></li>
-				<li class="bot"><a href="http://github.kkygood3.io">http://github.kkygood3.io</a></li>
+				<li class="bot"><a href="http://kkygood3.github.io">http://kkygood3.github.io</a></li>
 			</ul>
 		</div>
 	</footer>
