--- a/WebContent/photo.html
+++ b/WebContent/photo.html
@@ -3,81 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>사진 페이지</title>
-<style>
-body {
-	background: aqua;
-	height: 80%;
-}
-
-header {
-	margin-top: 20px;
-	line-height: 50px;
-	background: white;
-	overflow: auto;
-}
-
-.menu {
-	display: block;
-	float: right;
-	margin: 10px 10px 20px 10px;
-	background: olive;
-	width: 100px;
-	height: 50px;
-	text-align: center;
-	font-size: small;
-	box-shadow: 1px 1px 1px 1px gray;
-}
-
-#main {
-	height: 1600px;
-	background: white;
-	margin: 20px 0px;
-	text-align: center;
-	padding: 30px 0;
-	overflow: auto;
-}
-
-#first {
-	height: 600px;
-	margin: 70px 100px;
-}
-
-#second {
-	height: 600px;
-	margin: 70px 100px;
-}
-
-.image {
-	margin-right: 70px;
-	margin-top: 140px;
-	border: 5px solid black;
-	border-color: gray;
-	float: left;
-	height: 300px;
-	width: 400px;
-}
-
-.content {
-	float: left;
-	margin-top: 150px;
-	text-align: left;
-}
-
-#foot {
-	padding: 10px;
-}
-
-.bot {
-	display: block;
-}
-
-footer {
-	margin: 10px 0;
-	height: 100px;
-	text-align: center;
-	background: white;
-}
-</style>
+<link rel="stylesheet" href="/aboutme/css/style.css">
 </head>
 <body>
 	<header>
@@ -89,22 +15,22 @@ footer {
 		</ul>
 	</header>
 	<section id="main">
-		<div id="first">
+		<div id="photo-first">
 			<div>
-				<img src="크롱.jpg" alt="과거" class="image">
+				<img src="/aboutme/img/crong.jpg" alt="과거" class="image">
 			</div>
-			<div class="content">
+			<div class="photo-content">
 				2001.03.11<br>
 				<br>제가 크롱일 때 찍은 사진입니다.<br>
 				<br>이 때는 뽀뽀로의 집에서 신나게 놀던 때 입니다.
 			</div>
 		</div>
 		<hr>
-		<div id="second">
+		<div id="photo-second">
 			<div>
-				<img src="심슨.jpg" alt="현재" class="image">
+				<img src="/aboutme/img/simson.jpg" alt="현재" class="image">
 			</div>
-			<div class="content">
+			<div class="photo-content">
 				2010.03.11<br>
 				<br>결혼한 후에는 이런 모습이네요.<br>
 				<br>건강한 모습을 유지하고 있습니다.<br>
