--- a/WebContent/aboutme.html
+++ b/WebContent/aboutme.html
@@ -3,65 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>자기소개 페이지</title>
-<style>
-body {
-	background: aqua;
-	height: 80%;
-}
-
-header {
-	margin-top: 20px;
-	line-height: 50px;
-	background: white;
-	overflow: auto;
-}
-
-.menu {
-	display: block;
-	float: right;
-	margin: 10px 10px 20px 10px;
-	background: olive;
-	width: 100px;
-	height: 50px;
-	text-align: center;
-	font-size: small;
-	box-shadow: 1px 1px 1px 1px gray;
-}
-
-#main {
-	height: 800px;
-	background: white;
-	margin: 20px 0px;
-	text-align: center;
-	padding: 30px 0;
-	overflow: auto;
-}
-
-#foot {
-	padding: 10px;
-}
-
-.smalltitle {
-	text-align: left;
-	padding: 20px 200px 0px 200px;
-}
-
-.content {
-	text-align: left;
-	padding: 0px 200px 0px 200px;
-}
-
-.bot {
-	display: block;
-}
-
-footer {
-	margin: 10px 0;
-	height: 100px;
-	text-align: center;
-	background: white;
-}
-</style>
+<link rel="stylesheet" href="/aboutme/css/style.css">
 </head>
 <body>
 	<header>
@@ -72,7 +14,7 @@ footer {
 			<li class="menu"><a href="index.html">홈</a></li>
 		</ul>
 	</header>
-	<section id="main">
+	<section id="aboutme-main">
 		<div class="smalltitle">
 			<h1>이런 것을 잘해요?</h1>
 		</div>
@@ -113,7 +55,7 @@ footer {
 		<div id="foot">
 			<ul>
 				<li class="bot"><a href="giyong.kim@nts-corp.com">giyong.kim@nts-corp.com</a></li>
-				<li class="bot"><a href="http://github.kkygood3.io">http://github.kkygood3.io</a></li>
+				<li class="bot"><a href="http://kkygood3.github.io">http://kkygood3.github.io</a></li>
 			</ul>
 		</div>
 	</footer>
