--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,10 +9,10 @@
 
 	<nav class="content_background">
 		<ul class="nav_box nav">
-			<li><a href="index.html">홈</a></li>
-			<li><a href="aboutme.html">자기소개</a></li>
-			<li><a href="photo.html">내사진</a></li>
-			<li><a href="today">몇시에요</a></li>
+			<li><a href="/aboutme/index.html">홈</a></li>
+			<li><a href="/aboutme/aboutme.html">자기소개</a></li>
+			<li><a href="/aboutme/photo.html">내사진</a></li>
+			<li><a href="/aboutme/today">몇시에요</a></li>
 		</ul>
 	</nav>
 
@@ -24,14 +24,14 @@
 		<br>
 		<div>
 			<div class="content_box">
-				<a href="aboutme.html">자기소개</a>
+				<a href="/aboutme/aboutme.html">자기소개</a>
 			</div>
 			<div class="content_box">
-				<a href="photo.html">내사진</a>
+				<a href="/aboutme/photo.html">내사진</a>
 			</div>
 		</div>
 		<br>
-		<img src="img/map.png">
+		<img src="/aboutme/img/map.png">
 
 	</section>
 
